--- a/templates/home.html
+++ b/templates/home.html
@@ -4,5 +4,41 @@
 <body>
 	<div>
 		<h1> Welcome {{g.user.username}} </h2>
+		
+		<form action="" method = "POST">
+			<input type = "text" placeholder = "num1" name = "num1">
+			<br>
+			<br>
+			<input type = "text" placeholder = "num2" name = "num2">
+			<br>
+			<br>
+			<label for="Operation">Operation</label>
+			<select class="u-full-width" name="operation">
+			  <option value="add">Add</option>
+			  <option value="subtract">Subtract</option>
+			  <option value="multiply">Multiply</option>
+			  <option value="divide">Divide</option>
+			</select>
+			<br>
+			<br>
+			<input type = "submit" value = "Calculate">
+		</form>
+		
+		<button class="buttons"><a class = "anchor" href="{{ url_for('login')}}">Logout</a></button>
+		
+		<div class="result">
+          {{ result }}
+        </div>
+		
+		<div>
+		{% for key, val in operations_dict.items() %}
+			{% if val == 0 %}
+				<p></p>
+			{% else %}
+				<p> {{key}} posted {{val}} </p>
+			{% endif %}	
+		{% endfor %}
+		</div>
+		
 	</div>
 </body>
