connecting postgres database with application

--- a/templates/home.html
+++ b/templates/home.html
@@ -36,10 +36,10 @@
 		
 		<div class="notify">
 		{% for key, val in operations_dict.items() %}
-			{% if val1 == 0 %}
+			{% if val == 0 %}
 				<p></p>
 			{% else %}
-				<p> {{key}} posted {{val[0]}} of {{val[1]}} and {{val[2]}} </p>
+				<p> {{val[0]}} posted {{val[1]}} {{val[4]}} {{val[2]}} = {{val[5]}}</p>
 			{% endif %}
 		{% endfor %}
 		</div>
