modifications in home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,6 +37,7 @@
 	
 	<br>
 	<div class="notify">
+		<p><b>Last 10 calculations</b></p>
 		{% for key, val in operations_dict.items() %}
 			{% if val == 0 %}
 				<p></p>
